--- a/src/View/layout.html.twig
+++ b/src/View/layout.html.twig
@@ -13,6 +13,11 @@
 </head>
 
 <body>
-    {% block content %}{% endblock %}
+    {% block content %}
+    {% endblock %}
+    
+    {% block footer %}
+        {% include 'component/_footer.html.twig' %}
+    {% endblock %}
 </body>
 </html>
